# glucose

./: .gitignore  flake.nix  pyproject.toml
glucose/: database.py  env.py  main.py  model.py
nix/: checks.nix  dev-shells.nix  nixos-module.nix  packages.nix
