[project]
name = "glucose"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.24",
]
packages = [
  {include = "glucose"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "B", "Q", "W", "D"]
extend-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
